--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,9 @@
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
