--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -13,7 +13,15 @@
   background: white;
   padding: 4px 32px;
 }
+.left-links{
+  display: flex;
+  flex-direction: row;
+}
 
+.right-links{
+  display: flex;
+  flex-direction: row-reverse;
+}
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
