--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -13,15 +13,17 @@
   background: white;
   padding: 4px 32px;
 }
-ul.left-links{
+.left-links{
   display: flex;
   justify-content: flex-start;
+  flex-direction: row;
 
 }
 
 .right-links{
   display: flex;
   justify-content: flex-end;
+  flex-direction: row-reverse;
 }
 ul {
   /* this removes the dots on the list items*/
