--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,7 @@
 .header  {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  align-items: flex-start;
+  justify-content: center;
   font-family: monospace;
   background: papayawhip;
 }
