--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,10 @@
 .header  {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
 }
 
 .logo {
@@ -13,26 +14,17 @@
   background: white;
   padding: 4px 32px;
 }
-.left-links{
-  display: flex;
-  flex-direction: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
-}
 
-.right-links{
+ul {
   display: flex;
-  justify-content: flex-end;
-  align-content: flex-end;
-  flex-direction: row-reverse;
-}
-
-.ul {
+  margin: 0;
+  padding: 0;
+  gap: 8px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
 
-.a {
+a {
   font-size: 22px;
   background: white;
   padding: 8px;
